js/src/tests/test262/built-ins/NativeErrors/SyntaxError/prototype/proto.js
assert
.
sameValue
(
Object
.
getPrototypeOf
(
SyntaxError
.
prototype
)
Error
.
prototype
)
;
reportCompare
(
0
0
)
;
